--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
+        "msamgan/laravel-env-keys-checker": "^1.5",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.5",
         "pestphp/pest-plugin-laravel": "^3.0"
