--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "lint": "npx prettier --write . && ./vendor/bin/pint"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
