Setup Laravel Duster and lint and fixed issues

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "msamgan/laravel-env-keys-checker": "^1.5",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.5",
-        "pestphp/pest-plugin-laravel": "^3.0"
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "tightenco/duster": "*"
     },
     "autoload": {
         "psr-4": {
