--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "spatie/laravel-schedule-monitor": "^3.8"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
