Upgrades and Update todo.md
Upgrades and todo. Removed package-lock instead use yarn always

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-    "private": true,
+    "name": "laravel-livewire-boiler",
+    "version": "1.0.0",
+    "license": "MIT",
+    "private": false,
     "type": "module",
     "scripts": {
         "build": "vite build",
