--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,25 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "spatie/laravel-schedule-monitor": "^3.8"
+        "laravel/framework": "^11.32",
+        "laravel/tinker": "^2.10",
+        "livewire/livewire": "^3.5.12",
+        "livewire/volt": "^1.6.6",
+        "spatie/laravel-schedule-monitor": "^3.8.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.14",
-        "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.2",
-        "laravel/pail": "^1.1",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
-        "mockery/mockery": "^1.6",
+        "barryvdh/laravel-debugbar": "^3.14.7",
+        "fakerphp/faker": "^1.24",
+        "laravel/breeze": "^2.2.5",
+        "laravel/pail": "^1.2.1",
+        "laravel/pint": "^1.18.1",
+        "laravel/sail": "^1.38",
+        "mockery/mockery": "^1.6.12",
         "msamgan/laravel-env-keys-checker": "^1.5",
-        "nunomaduro/collision": "^8.1",
-        "pestphp/pest": "^3.5",
+        "nunomaduro/collision": "^8.5",
+        "pestphp/pest": "^3.5.1",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "tightenco/duster": "*"
+        "tightenco/duster": ">=3.0.3"
     },
     "autoload": {
         "psr-4": {
