--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel/folio": "^1.1",
         "laravel/framework": "^11.32",
         "laravel/tinker": "^2.10",
         "livewire/livewire": "^3.5.12",
