AddED site protection when in dev mode.

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,5 @@ ERROR_SOLUTIONS_OPEN_AI_KEY=
 SCOUT_DRIVER=""
 MEILISEARCH_HOST=""
 MEILISEARCH_NO_ANALYTICS=""
+
+SITE_PROTECTION_PASSWORDS=yourpassword
