--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "elic-dev/laravel-site-protection": "^1.2",
         "laravel/folio": "^1.1.9",
         "laravel/framework": "^11.34.2",
         "laravel/tinker": "^2.10",
