--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
+/.nova
 /.vscode
 /.zed
 /storage/debugbar/*.json
+/build
+composer.lock
+package-lock.json
+yarn.lock
