--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "elic-dev/laravel-site-protection": "^1.2",
+        "igaster/laravel-theme": "^2.0",
         "laravel/folio": "^1.1.9",
         "laravel/framework": "^11.34.2",
         "laravel/tinker": "^2.10",
