--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "calebporzio/sushi": "^2.5.2",
         "elic-dev/laravel-site-protection": "^1.2",
-        "igaster/laravel-theme": "^2.0",
+        "igaster/laravel-theme": "^2.0.20",
         "laravel/folio": "^1.1.9",
         "laravel/framework": "^11.34.2",
         "laravel/tinker": "^2.10",
